# nano-risc

./: Cargo.toml  LICENSE  README.md  factorial.asm  index.html  manifest.webmanifest  registerSW.js  sw.js
arch/: Cargo.toml
arch/src/: argument.rs  assembly.rs  assembly_error.rs  assembly_error_kind.rs  debug_info.rs  instruction.rs  lib.rs  limits.rs  location.rs  math.rs  opeartion.rs  register_kind.rs  register_mode.rs  source_unit.rs  token.rs
asm/: Cargo.toml
assets/: cssMode-2357ca1b.js  cssMode-36b0858a.js  cssMode-4f0f0885.js  cssMode-6efb5378.js  cssMode-8d27845a.js  freemarker2-18d63262.js  freemarker2-3695a951.js  freemarker2-3794c5f0.js  freemarker2-b5a7a8d5.js  freemarker2-e70d4eec.js  handlebars-1d5aae1a.js  handlebars-45d191e2.js  handlebars-70d5dd57.js  handlebars-be91cc45.js  handlebars-dbb0183a.js  html-32873a64.js  html-34473b6f.js  html-73b43691.js  html-9bfef593.js  html-fbbcbfe3.js  htmlMode-df72141e.js  htmlMode-e7accce3.js  htmlMode-f5844c6f.js  htmlMode-f635cbfc.js  htmlMode-fc4e4340.js  index-145cb6d5.js  index-1ad2a34b.css  index-2663983f.css  index-4116382b.js  index-5d6fb9b9.js  index-7a1efc6c.js  index-99a4cedf.css  index-aad63360.js  index-c612ae6b.css  index-e6cb1244.css  javascript-01262f6f.js  javascript-53da5e03.js  javascript-8180dd72.js  javascript-af7215f6.js  javascript-ef1ac1bb.js  (+48 more)
cli/: Cargo.toml
cli/src/: main.rs
ide/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ide/src/: App.vue  appStore.ts  main.ts  vm.ts
parser/: Cargo.toml
parser/src/: comment.rs  instruction.rs  label.rs  lib.rs  (+1 more)
tests/: Cargo.toml
tests/benches/: factorial.rs
tests/src/: lib.rs
vm/: Cargo.toml
web/: Cargo.toml  README.md
web/src/: lib.rs
(+31 files in other folders)
