[package]
name = "nano-risc-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
nano-risc-asm = { package = "nano-risc-asm", path = "../asm" }
nano-risc-vm = { package = "nano-risc-vm", path = "../vm" }
nano-risc-arch = { package = "nano-risc-arch", path = "../arch" }
clap = { version = "4.4.6", features = ["derive"] }
