[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "factorial"
harness = false

[dependencies]
nano-risc-asm = { package = "nano-risc-asm", path = "../asm" }
nano-risc-arch = { package = "nano-risc-arch", path = "../arch" }
nano-risc-vm = { package = "nano-risc-vm", path = "../vm" }
