[package]
name = "nano-risc-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
parser = { package = "parser", path = "../parser" }
vm = { package = "vm", path = "../vm" }
arch = { package = "arch", path = "../arch" }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
