[package]
name = "nano-risc-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nano-risc-asm = { package = "nano-risc-asm", path = "../asm" }
nano-risc-vm = { package = "nano-risc-vm", path = "../vm" }
nano-risc-arch = { package = "nano-risc-arch", path = "../arch" }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.0"
serde = { version = "1.0.189", features = ["derive"] }
